--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,11 +1,11 @@
 .stylized-button {
+  min-height: 40px;
   height: 100%;
   width: 100%;
   cursor: pointer;
-  padding: 0px 15px;
-  line-height: 34px;
   border: 1px solid #999;
   border-radius: 7px;
+  font-size: large;
   user-select: none;
   background-color: rgba(241, 193, 104, 0.925);
 }
